# content-hub

./: .gitignore  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  GOOGLE_OAUTH_SETUP.md  pyproject.toml  run.py
backend/app/: main.py  swagger.json
backend/app/core/: auth.py  cache.py  config.py  database.py  errors.py  logging_config.py  oauth.py  scheduler.py
backend/app/models/: __init__.py  article_feedback.py  bookmark.py  preferences.py  read_history.py  refresh_token.py  source.py  tag.py  user.py  user_tag.py
backend/app/routes/: auth.py  bookmarks.py  feedback.py  feeds.py  onboarding.py  popular.py  read_history.py  recommendations.py  rss.py  scrape.py  social.py  stats.py  tags.py  trending.py  users.py
backend/app/schemas/: auth.py  bookmark.py  feedback.py  onboarding.py  read_history.py  user.py
backend/app/scripts/: add_content_preference.py  add_display_prefs.py  add_last_login.py  add_show_read_articles.py  clean_db.py  clear_cache.py  init_db.py  list_models.py  migrate_add_indexes.py  migrate_onboarding.py  migrate_read_history.py  seed_tags.py
backend/app/services/: feed_service.py  popular_service.py  recommendation_service.py  stats_service.py  trending_service.py
backend/app/tests/: test_aggregator.py  test_app.py  test_auth_features.py  test_bookmarks.py  test_cache.py  test_categorizer.py  test_feed_service.py  test_feeds.py  test_feeds_endpoint.py  test_feeds_search.py  test_integration.py  test_new_features.py  test_personalization.py  test_rss.py  (+7 more)
(+115 files in other folders)
