[project]
name = "content-hub-backend"
version = "0.1.0"
description = "Personal feed aggregator that collects content from RSS feeds and web sources."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "email-validator>=2.3.0",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-swagger-ui>=5.21.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
